<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test3G4G</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="g3">3G:</string>
	<string name="g3data">0MB</string>
	<string name="g4">4G:</string>
	<string name="g4data">0MB</string>
	<string name="btn">Click to Refresh</string>
</resources>
