<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="60dip">
        <TextView 
            android:id="@+id/g3"
            android:layout_alignParentLeft="true"
            android:layout_width="60dip"
            android:layout_height="match_parent"
            android:text="@string/g3"/>
        <TextView 
            android:id="@+id/g3data"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/g3data"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/g3"/>
    </RelativeLayout>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="60dip">
        <TextView 
            android:id="@+id/g4"
            android:layout_alignParentLeft="true"
            android:layout_width="60dip"
            android:layout_height="match_parent"
            android:text="@string/g4"/>
        <TextView 
            android:id="@+id/g4data"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/g4data"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/g4"/>
    </RelativeLayout>
    <Button 
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/btn"/>
</LinearLayout>
